--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>google</h3>
+    <header class="header">
+        <h1>BOLG</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut quos rerum, eveniet hic sint quae repudiandae corporis autem perspiciatis provident quis possimus explicabo saepe blanditiis dolor mollitia ullam suscipit magnam.</p>
+    </header>
+    
+    <div class="ki">
+        <h5>first</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni officia unde qui dolorem aliquid ipsam ullam provident dolorum ipsum harum, voluptates repudiandae quae, facilis explicabo assumenda quibusdam eveniet cum ipsa.</p>
+    </div>
+
+    <div class="ki">
+        <h5>seound</h5>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos minima cumque nobis esse reiciendis. Quos aperiam quam laudantium provident eius cum, aliquam recusandae a dolor fugiat. Ducimus eos quod in!</p>
+    </div>
+    <div class="ki">
+        <h5>third</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam animi saepe quas est a ducimus illo neque et ea nulla earum asperiores, id nesciunt debitis delectus, ratione consectetur obcaecati totam.</p>
+    </div>
     
 </body>
 </html>
